--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ body {
     background: #000000;
     background-image: url('https://ncooper00.github.io/Moon-Phase-Website/starry-night-2.jpg');
     background-repeat: no-repeat;
-    background-size: 100vw 100vw;
+    background-size: 100vh 100v;
     display: flex;
     /* overflow: hidden; */
     /* overscroll-behavior: hide; */
@@ -308,8 +308,8 @@ a:hover, a:active {
 .musicBox {
     position: fixed;
     bottom: 0;
-    left: 50%;
-    margin-left: -25%;
+    left: 0%;
+    /* margin-left: -25%; */
     width: 50%;
     height: 85px;
     background: hsl(0 0% 100% / 0.05);
@@ -318,7 +318,7 @@ a:hover, a:active {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 20vh 20vh 0 0;
+    border-radius: 0 20vh 0 0;
     box-shadow: 0px 0px 5px rgb(50, 119, 248);
     z-index: 9999;
 }
@@ -330,9 +330,9 @@ a:hover, a:active {
 .musicBox[aria-expanded="true"] {
     position: fixed;
     bottom: -100%;
-    left: 50%;
-    margin-left: -15%;
-    width: 30%;
+    left: 0%;
+    /* margin-left: -15%; */
+    width: 50%;
     height: 85px;
     background: hsl(0 0% 100% / 0.05);
     backdrop-filter: blur(1rem);
@@ -386,7 +386,7 @@ a:hover, a:active {
     position: absolute;
     display: inline-block;
     left: 2%;
-    border-radius: 100vh 0 0 0;
+    border-radius: 0 0 0 0;
     overflow: hidden;
 }
 
@@ -819,7 +819,7 @@ a:hover, a:active {
     }
     .mainNavLi {
         display: block;
-        line-height: 100px;
+        line-height: 70px;
         transition: all 500ms ease;
     }
     .headerA {
@@ -875,16 +875,13 @@ a:hover, a:active {
         margin-right: 0%;
         display: inline-block;
         padding: 0 5px;
+        border-left: 2px solid white;
+        border-right: 2px solid white;
     }
     
     .optionBtn {
         color: rgb(214, 214, 214);
         font-size: 1.1em;
-    }
-    .github {
-        border-left: 2px solid white;
-        border-right: 2px solid white;
-        padding: 0 8px;
     }
     .discord:active {
         border-bottom: 2px solid white;
