Made all the planets hoverable on the solar system widget

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
     scroll-behavior: smooth;
 }
 
+body {
+    cursor: url();
+}
+
 button, input[type="submit"], input[type="reset"] {
 	background: none;
 	color: inherit;
