--- a/css/pageTwo.css
+++ b/css/pageTwo.css
@@ -31,12 +31,34 @@
     background-size: cover;
     background-repeat: no-repeat;
     cursor: pointer;
+    transition: all 600ms;
+    animation: diceDefault 10s infinite ease-out;
 }
 
-.randomizeSolar:hover {
-    width: 50px;
-    /* box-shadow: 0px 0px 5px white; */
+.randoHover1:hover {
     animation: diceHover 6s infinite;
+}
+
+@keyframes diceDefault {
+    0% {
+        transform: translateY(0px);
+    }
+    5% {
+        transform: translateY(3px);
+    }
+    12.5% {
+        transform: translateY(6px);
+        transform: rotate(10deg);
+    }
+    15% {
+        transform: translateY(6px);
+        transform: rotate(-10deg);
+    }
+    17.5% {
+        transform: translateY(6px);
+        transform: rotate(0deg);
+    }
+
 }
 
 @keyframes diceHover {
@@ -106,7 +128,7 @@
 }
 
 .randomizeSolar:active {
-    animation: diceHover 6s infinite;
+    /* animation: diceHover 6s infinite; */
 }
 
 .orderSolar {
@@ -119,83 +141,54 @@
     background-size: cover;
     background-repeat: no-repeat;
     cursor: pointer;
+    transition: all 600ms;
+    animation: orderDefault 15s infinite ease-in-out;
 }
 
-.orderSolar:hover {
-    width: 50px;
-    /* box-shadow: 0px 0px 5px white; */
-    animation: diceHover 6s infinite;
+.orderHover1:hover {
+    animation: orderHover 6s infinite;
 }
 
-@keyframes diceHover {
+@keyframes orderDefault {
+    0% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(0deg);
+    }
+    40% {
+        transform: rotate(25deg);
+    }
+    60% {
+        transform: rotate(-15deg);
+    }
+    75% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+@keyframes orderHover {
     0% {
         transform: translateY(0px);
     }
-    5% {
-        transform: translateY(3px);
-    }
     10% {
-        transform: translateY(6px);
-        transform: rotate(5deg);
-    }
-    15% {
-        transform: translateY(6px);
-        transform: rotate(-5deg);
-    }
-    20% {
-        transform: translateY(6px);
-        transform: rotate(5deg);
+        transform: rotate(-25deg);
     }
     25% {
-        transform: translateY(6px);
-        transform: rotate(-5deg);
+        transform: rotate(35deg);
     }
-    30% {
-        transform: translateY(6px);
-        transform: rotate(5deg);
-    }
-    35% {
-        transform: translateY(6px);
-        transform: rotate(-5deg);
-    }
-    50% {
-        transform: translateY(-2px);
-        transform: rotate(0deg);
-    }
-    55% {
-        transform: translateY(6px);
-        transform: rotate(-15deg);
-    }
-    60% {
-        transform: translateY(6px);
-        transform: rotate(15deg);
-    }
-    65% {
-        transform: translateY(6px);
-        transform: rotate(-15deg);
-    }
-    70% {
-        transform: translateY(6px);
-        transform: rotate(15deg);
-    }
-    75% {
-        transform: translateY(6px);
-        transform: rotate(-15deg);
-    }
-    80% {
-        transform: translateY(6px);
-        transform: rotate(15deg);
+    40% {
+        transform: rotate(-45deg);
     }
     100% {
-        transform: translateY(0px);
-        transform: rotate(0deg);
+        transform: rotate(360deg);
     }
 
 }
 
-.orderSolar:active {
-    animation: diceHover 6s infinite;
-}
 
 .planet {
     cursor: pointer;
