--- a/css/pageTwo.css
+++ b/css/pageTwo.css
@@ -9,19 +9,28 @@
 
 .page2 {
     display: flex;
-    /* justify-content: center; */
+    flex-wrap: wrap;
+    justify-content: center;
     /* align-items: center; */
     /* column-gap: 45%; */
 }
 
 .page2Info {
-    width: 50vw;
+    width: min(1000px, 100%);
     height: fit-content;
-    background-color: red;
+    position: relative;
+    left: 0%;
+    top: 15%;
+    /* background-color: red; */
 }
 
 .page2System {
-    width: 50vw;
+    width: min(750px, 95%);
+    justify-content: center;
+    align-items: center;
+    /* margin: 0px 10vw; */
+    display: flex;
+    position: relative;
 }
 
 .page2Head {
@@ -30,6 +39,7 @@
     color: white;
     /* margin-top: 10%; */
     padding-bottom: 5px;
+    width: fit-content;
     /* margin-left: 5%; */
     border-bottom: 2px solid white;
 }
@@ -213,6 +223,7 @@
     /* grid-column: 2; */
     margin-top: 18%; 
     position: relative;
+    /* right: -50%;; */
     aspect-ratio: 1;
     align-self: center;
     /* bottom: 15%; */
