Fixed link to main bg

--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ body {
     /* width: 100vw; */
     /* height: 100vh; */
     background: #000000;
-    background-image: url('/space-website-background.jpg');
+    background-image: url('https://ncooper00.github.io/Moon-Phase-Website/space-website-background.jpg');
     /* background-attachment: fixed; */
     background-position: center;
     background-repeat: no-repeat;
