--- a/css/pageTwo.css
+++ b/css/pageTwo.css
@@ -247,7 +247,7 @@
     position: absolute;
     aspect-ratio: 1;
     border: 1px solid white;
-    width: 32.5vw;
+    width: 87%;
     /* background-color: black; */
     border-radius: 50%;
     display: flex;
@@ -285,7 +285,7 @@
     position: absolute;
     aspect-ratio: 1;
     border: 1px solid white;
-    width: 27.5vw;
+    width: 85%;
     /* background-color: black; */
     border-radius: 50%;
     display: flex;
@@ -323,7 +323,7 @@
     position: absolute;
     aspect-ratio: 1;
     border: 1px solid white;
-    width: 22.5vw;
+    width: 85%;
     /* background-color: black; */
     border-radius: 50%;
     display: flex;
@@ -386,7 +386,7 @@
     position: absolute;
     aspect-ratio: 1;
     border: 1px solid white;
-    width: 17.5vw;
+    width: 82%;
     /* background-color: black; */
     border-radius: 50%;
     display: flex;
@@ -422,7 +422,7 @@
 
 .saturnRot {
     height: 100%;
-    width: 100%;
+    width: 10px;
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -450,7 +450,7 @@
     position: absolute;
     aspect-ratio: 1;
     border: 1px solid white;
-    width: 12.5vw;
+    width: 75%;
     /* background-color: black; */
     border-radius: 50%;
     display: flex;
@@ -488,7 +488,7 @@
     position: absolute;
     aspect-ratio: 1;
     border: 1px solid white;
-    width: 10vw;
+    width: 78%;
     /* background-color: black; */
     border-radius: 50%;
     display: flex;
@@ -526,7 +526,7 @@
     position: absolute;
     aspect-ratio: 1;
     border: 1px solid white;
-    width: 7.5vw;
+    width: 75%;
     /* background-color: black; */
     border-radius: 50%;
     display: flex;
@@ -564,7 +564,7 @@
     position: absolute;
     aspect-ratio: 1;
     border: 1px solid white;
-    width: 5vw;
+    width: 73%;
     /* background-color: black; */
     border-radius: 50%;
     display: flex;
