--- a/css/pageTwo.css
+++ b/css/pageTwo.css
@@ -11,26 +11,28 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     /* column-gap: 45%; */
 }
 
 .page2Info {
-    width: min(1000px, 100%);
+    width: min(1000px, 50%);
     height: fit-content;
     position: relative;
     left: 0%;
-    top: 15%;
+    top: 2%;
+    display: flex;
+    flex-wrap: wrap;
     /* background-color: red; */
 }
 
 .page2System {
-    width: min(750px, 95%);
+    width: min(750px, 50%);
     justify-content: center;
     align-items: center;
     /* margin: 0px 10vw; */
     display: flex;
-    position: relative;
+    /* position: relative; */
 }
 
 .page2Head {
@@ -210,6 +212,60 @@
         transform: rotate(360deg);
     }
 
+}
+
+.solarBodyDesc {
+    width: 100%;
+    height: 65vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /* background-color: #68401b; */
+}
+
+.planetSection {
+    /* background-color: #00bd55; */
+    width: 55%;
+    height: 100%;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+}
+
+.planetName {
+    font-size: 2.35em;
+    color: white;
+    text-align: center;
+    width: 100%;
+    height: fit-content;
+    /* text-decoration: underline; */
+    margin: 25px 0px;
+}
+
+.planetDescSection {
+    width: 100%;
+    aspect-ratio: .85;
+    /* background-color: #00bd55; */
+    height: fit-content;
+    color: white;
+    font-size: 1.3em;
+    overflow-wrap: break-word;
+    overflow: scroll;
+    overflow-x: hidden;
+    resize: none;
+}
+
+.planetImage {
+    width: 25%;
+    aspect-ratio: 1;
+    align-self: center;
+    font-size: 0;
+    /* background-image: none; */
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    margin-right: 10%;
+    transition: background-image 600ms, width 600ms, border-radius 200ms;
 }
 
 
